/***********************************************/
/**************MangAdmin ChangeLog**************/
/***********************************************/

  Official : http://mangadmin.all-mag.de
 Subversion: http://mangadmin.googlecode.com/svn/

/***********************************************/
Rev. 4:
  - added better polish translation, thanks to sahib
  - converted language files to be display characters without errors
  - added MaNGOS core patch to replace .gmon and .gmoff with .togglegm
  - added a toggle gm button
  - fixed much errors
  - cleaned up code a bit
  - sorry forgot language switcher today, comes later
  
Rev. 3:
  - fixed a few bugs
  - added languages:
    |- Finnish, thanks to Seizer
    |- Swedish, thanks to dxers
    |- Polish, thanks to gerard
  - a language switcher comes with the next revision, no time now
  - updated the libraries

Rev. 2:
  - french translation added, thanks to luciolis

Rev. 1:
  - initial import
  - logo/header made
  - new design and layout
  - menu handling and log functions
  - FrameLib initial import
  - added Libraries:
    |- AceLibrary
    |- AceOO-2.0
    |- AceDB-2.0
    |- AceHook-2.1
    |- DewDrop-2.0
    |- AceAddon-2.0
    |- AceLocale-2.2
    |- AceConsole-2.0
    |- FrameLib-1.0
    |- Tablet-2.0
    |- Graph-1.0
    |- FuBarPlugin-2.0