@@ -31,6 +31,7 @@ Locales\frFR.lua
 Locales\fiFI.lua
 Locales\plPL.lua
 Locales\svSV.lua
+Locales\itIT.lua
 
 MangFrames.lua
 MangAdmin.lua
